--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div>
-        <div class="batr">
+        <div >
             <div class="topap">
-                <img src="./img/topa.JPG" alt="">
+                <img src="./img/hetopa.PNG" alt="">
             </div>
 
             <div>
-                <form action="">
+                <form class="batr" action="">
                     <div class="conto">
-                        <img src="./img/conton.JPG" alt="">
+                        <img src="./img/conmot02.PNG" alt="">
                     
 
-                    <button class="btn1"  id="barinxri" type="button">Ir para pagamento</button>
+                    <button class="btn1"  id="barinxri" type="button">Contunar</button>
                 </div>
                 </form>
             </div>
@@ -30,7 +30,7 @@
 
     <div>
         <div class="bobota">
-            <img src="./img/botta.JPG" alt="">
+            <img src="./img/Capture d’écran 2023-11-06 à 23.01.44.png" alt="">
         </div>
     </div>
 
