--- a/views/loadit1.ejs
+++ b/views/loadit1.ejs
@@ -12,12 +12,15 @@
     <div>
         <div>
             <div>
-    
-                
-                <div style="display: grid; justify-content: center; text-align: center; margin-bottom: 100px;">
-                    <img style="width: 100px; justify-self: center; margin-top: 100px; margin-bottom: 20px;"  src="./img/Rolling-1s-200px.svg" alt="">
-                 <p>Por favor aguarde enquanto processamos o seu pedido. <br> Não feche o seu navegador..</p>
+                <div class="topap">
+                    <img src="./img/hetopa.PNG" alt="">
                 </div>
+                
+                <div style="display: grid; justify-content: center; text-align: center; margin-bottom: 100px; width: 100%; height: 100vh; background-color: rgba(0, 0, 0, 0); position: absolute; top: 0;z-index: 5;
+align-content: space-evenly;">
+    <img style="width: 140px; justify-self: center; margin-top: 100px; margin-bottom: 20px;"  src="./img/Ring-1s-200px (1).svg" alt="">
+
+</div>
     
     
                 </div>
